--- a/index.html
+++ b/index.html
@@ -209,10 +209,10 @@
 
       <video loop autoplay class="background__video">
         <source
-          src="./assets/images/02_final_assets_images_background_video.webm"
+          src="/assets/images/02_final_assets_images_background_video.webm"
           type="video/webm"
         />
-        <source src="./assets/images/background_video.mp4" type="video/mp4" />
+        <source src="/assets/images/background_video.mp4" type="video/mp4" />
       </video>
     </div>
 
